--- a/src/app/list-event/list-event.component.scss
+++ b/src/app/list-event/list-event.component.scss
@@ -20,11 +20,13 @@ img {
 #header {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
-#events {
-    width: 100%;
-    height: 90%;
+.events {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
 }
 
 p, h2 {
@@ -57,9 +59,8 @@ article {
 }
 
 .event {
-    width: 100%;
-    margin-bottom: 1rem;
-    align-items: center;
+    margin-bottom: 0.3rem;
+    margin-inline: auto;
     display: flex;
     flex-direction: row;
     cursor: pointer;
@@ -73,7 +74,7 @@ article {
     box-shadow: 0px 2px 2px rgb(0, 0, 0);
     background-color: rgb(255, 81, 0);
     border-radius: 20px;
-    width: 100%;
+    width: 80%;
 
     &::after {
         content: '';
@@ -94,11 +95,12 @@ article {
 }
 
 .title {
-    padding-inline: 5%;
     margin-block: 1%;
     margin-left: 1rem;
     background-color: #ff003c;
     border-radius: 25px;
+    width: auto;
+    white-space: nowrap;
     text-align: center;
     width: 50%;
     box-sizing: border-box;
@@ -128,7 +130,7 @@ app-search-bar {
     position: absolute;
 }
 
-.nav-button {
+.add-button {
     overflow: hidden;
     & > button {
         cursor: pointer;
